@@ -4,3 +4,5 @@ Next version
 * ParameterisedHolders now allow some Parameters to opt out of representation as a Plug by adding a "noHostMapping" user data item with a value of BoolData( True ).
 
 * Can now implement and use ParameterHandlers in python.
+
+* Ctrl-C now correctly kills Gaffer
